# CMF_HF_BASELINE

./: .gitignore  README.md  pyproject.toml
notebooks/: requests_for_llm.txt  total_baseline.ipynb
src/: main.py
src/agents/: portfolio_manager.py  risk_manager.py  signal_agent.py
src/backtester/: backtester.py
src/core/: config.py  config.yaml  events.py
src/data_fetcher/: data_collector.py
src/executor/: order_executor.py
